--- a/25- ~  Title ; Responsive Design and Viewports  ~.html
+++ b/25- ~  Title ; Responsive Design and Viewports  ~.html
@@ -1,3 +1,23 @@
+
+
+
+                <!-- ~  Title :   Responsive Design and Viewport.   ~ -->
+
+
+
+
+
+    <!-- 
+            The concept of the viewport is fundamental in modern web development,
+    particularly in the context of responsive and adaptive design strategies
+    that aim to provide optimal viewing experiences across a diverse range of devices and screen sizes.
+    
+     -->
+
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +26,11 @@
     <title>Document</title>
 </head>
 <body>
+    <img src="https://picsum.photos/seed/picsum/200/300" alt="Message if the src can't load." loading="lazy" 
+    style="height: 80%; width: auto; display: block; margin: 0 auto;"><br>
+    <p>
+        Hello  World
+    </p>
 
 </body>
 </html>
