--- a/25- ~  Title ; Responsive Design and Viewports  ~.html
+++ b/25- ~  Title ; Responsive Design and Viewports  ~.html
@@ -12,6 +12,10 @@
     particularly in the context of responsive and adaptive design strategies
     that aim to provide optimal viewing experiences across a diverse range of devices and screen sizes.
     
+    in the meta tag of the name = viewport
+    width=device-width → matches device screen width (on mobile).
+
+    initial-scale=1.0 → sets zoom level when the page loads.
      -->
 
 
