--- a/27-  ~    Title :  iframe attribute     ~.html
+++ b/27-  ~    Title :  iframe attribute     ~.html
@@ -5,17 +5,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color: blue;">
+<body style="background-color: pink;">
 
     <!-- Title -->
     <div>
-        
-        <h1 style="color: white;">
 
+        <h1 style="color: white; text-align: center;">
+            Welcom To  :  WWW.MyFavortVideos.com
         </h1>
+        <hr>
+        <br>
+        <br>
+    </div>
+
+    <!-- eager Loading -->
+    <div>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/xeXV1KoX034?si=JN6bieJpe9BlLkym" title="YouTube video player" loading="eager" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/sAWF5u3T3G8?si=wddc5bADiJuZyFXy" title="YouTube video player" loading="eager" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/qByW0FNpHBQ?si=-bEUU7WPCpnDsPXL" title="YouTube video player" loading="eager" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <br>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/ehVhALWRin4?si=jYBYb-i7ApXNvgyw" title="YouTube video player" loading="eager" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/aLhEahH3U_Y?si=_oZXdbpzvzvL8YYV" title="YouTube video player" loading="eager" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/Ogd73IX0KRc?si=Px7TvBFSJ58QyZ8g" title="YouTube video player" loading="eager" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <br>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/HZ8VF0EdITk?si=FQtxkUUd9PWLwRhZ" title="YouTube video player" loading="eager" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/T9RwtNoDTyo?si=HiHA0_k6ikSMigRI" title="YouTube video player" loading="eager" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/MjsjRXX9PrQ?si=aCbwSalTtZ1weH05" title="YouTube video player" loading="eager" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <br>
+        <iframe width="622" height="315" src="https://www.youtube.com/embed/gWFbES7PvRE?si=lKjm2oxcrE7oVcvc" title="YouTube video player" loading="eager" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="622" height="315" src="https://www.youtube.com/embed/9Rg1bt7uOsk?si=evEvkfEPYmbG3OZw" title="YouTube video player" loading="eager" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
     </div>
 
+    <!-- lazy loading -->
+    <div>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/xeXV1KoX034?si=JN6bieJpe9BlLkym" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/sAWF5u3T3G8?si=wddc5bADiJuZyFXy" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/qByW0FNpHBQ?si=-bEUU7WPCpnDsPXL" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <br>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/ehVhALWRin4?si=jYBYb-i7ApXNvgyw" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/aLhEahH3U_Y?si=_oZXdbpzvzvL8YYV" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/Ogd73IX0KRc?si=Px7TvBFSJ58QyZ8g" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <br>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/HZ8VF0EdITk?si=FQtxkUUd9PWLwRhZ" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/T9RwtNoDTyo?si=HiHA0_k6ikSMigRI" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/MjsjRXX9PrQ?si=aCbwSalTtZ1weH05" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <br>
+        <iframe width="622" height="315" src="https://www.youtube.com/embed/gWFbES7PvRE?si=lKjm2oxcrE7oVcvc" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="622" height="315" src="https://www.youtube.com/embed/9Rg1bt7uOsk?si=evEvkfEPYmbG3OZw" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/xeXV1KoX034?si=JN6bieJpe9BlLkym" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/sAWF5u3T3G8?si=wddc5bADiJuZyFXy" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/qByW0FNpHBQ?si=-bEUU7WPCpnDsPXL" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <br>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/ehVhALWRin4?si=jYBYb-i7ApXNvgyw" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/aLhEahH3U_Y?si=_oZXdbpzvzvL8YYV" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/Ogd73IX0KRc?si=Px7TvBFSJ58QyZ8g" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <br>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/HZ8VF0EdITk?si=FQtxkUUd9PWLwRhZ" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/T9RwtNoDTyo?si=HiHA0_k6ikSMigRI" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/MjsjRXX9PrQ?si=aCbwSalTtZ1weH05" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <br>
+        <iframe width="622" height="315" src="https://www.youtube.com/embed/gWFbES7PvRE?si=lKjm2oxcrE7oVcvc" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="622" height="315" src="https://www.youtube.com/embed/9Rg1bt7uOsk?si=evEvkfEPYmbG3OZw" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/xeXV1KoX034?si=JN6bieJpe9BlLkym" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/sAWF5u3T3G8?si=wddc5bADiJuZyFXy" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/qByW0FNpHBQ?si=-bEUU7WPCpnDsPXL" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <br>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/ehVhALWRin4?si=jYBYb-i7ApXNvgyw" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/aLhEahH3U_Y?si=_oZXdbpzvzvL8YYV" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/Ogd73IX0KRc?si=Px7TvBFSJ58QyZ8g" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <br>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/HZ8VF0EdITk?si=FQtxkUUd9PWLwRhZ" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/T9RwtNoDTyo?si=HiHA0_k6ikSMigRI" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="413" height="315" src="https://www.youtube.com/embed/MjsjRXX9PrQ?si=aCbwSalTtZ1weH05" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <br>
+        <iframe width="622" height="315" src="https://www.youtube.com/embed/gWFbES7PvRE?si=lKjm2oxcrE7oVcvc" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="622" height="315" src="https://www.youtube.com/embed/9Rg1bt7uOsk?si=evEvkfEPYmbG3OZw" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    </div>
 
 </body>
 </html>
